--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -27,64 +27,71 @@
                 </div>
             </div>
             <div class="rd-navbar-aside-element">
-                <!-- RD Navbar Search-->
-                <div class="rd-navbar-search rd-navbar-search-2">
-                <button class="rd-navbar-search-toggle rd-navbar-fixed-element-2" data-rd-navbar-toggle=".rd-navbar-search"><span></span></button>
-                <form class="rd-search" action="search-results.html" data-search-live="rd-search-results-live" method="GET">
-                    <div class="form-wrap">
-                    <label class="form-label" for="rd-navbar-search-form-input">Search...</label>
-                    <input class="rd-navbar-search-form-input form-input" id="rd-navbar-search-form-input" type="text" name="s" autocomplete="off"/>
-                    <div class="rd-search-results-live" id="rd-search-results-live"></div>
-                    <button class="rd-search-form-submit fl-bigmug-line-search74" type="submit"></button>
+                <% if false %>
+                    <!-- RD Navbar Search-->
+                    <div class="rd-navbar-search rd-navbar-search-2">
+                    <button class="rd-navbar-search-toggle rd-navbar-fixed-element-2" data-rd-navbar-toggle=".rd-navbar-search"><span></span></button>
+                    <form class="rd-search" action="search-results.html" data-search-live="rd-search-results-live" method="GET">
+                        <div class="form-wrap">
+                        <label class="form-label" for="rd-navbar-search-form-input">Search...</label>
+                        <input class="rd-navbar-search-form-input form-input" id="rd-navbar-search-form-input" type="text" name="s" autocomplete="off"/>
+                        <div class="rd-search-results-live" id="rd-search-results-live"></div>
+                        <button class="rd-search-form-submit fl-bigmug-line-search74" type="submit"></button>
+                        </div>
+                    </form>
                     </div>
-                </form>
-                </div>
+                <% end %>
                 <!-- RD Navbar Basket-->
                 <div class="rd-navbar-basket-wrap">
-                <button class="rd-navbar-basket fl-bigmug-line-shopping202" data-rd-navbar-toggle=".cart-inline"><span>2</span></button>
-                <div class="cart-inline">
-                    <div class="cart-inline-header">
-                    <h5 class="cart-inline-title">In cart:<span> 2</span> Products</h5>
-                    <h6 class="cart-inline-title">Total price:<span> $41</span></h6>
-                    </div>
-                    <div class="cart-inline-body">
-                    <div class="cart-inline-item">
-                        <div class="unit unit-spacing-sm align-items-center">
-                        <div class="unit-left"><a class="cart-inline-figure" href="single-product.html"><img src="images/product-mini-2-106x104.jpg" alt="" width="106" height="104"/></a></div>
-                        <div class="unit-body">
-                            <h6 class="cart-inline-name"><a href="single-product.html">Stay Wild T-Shirt</a></h6>
-                            <div>
-                            <div class="group-xs group-middle">
-                                <div class="table-cart-stepper">
-                                <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000"/>
+                <a href="<%= cart_url %>" style="color: #fff">
+                    <% if false %><button class="rd-navbar-basket fl-bigmug-line-shopping202" data-rd-navbar-toggle=".cart-inline"><span></span></button> %><% end %>
+                    <button class="rd-navbar-basket fl-bigmug-line-shopping202"><span></span></button>
+                </a>
+                    <% if false %>
+                        <div class="cart-inline">
+                            <div class="cart-inline-header">
+                            <h5 class="cart-inline-title">In cart:<span> 2</span> Products</h5>
+                            <h6 class="cart-inline-title">Total price:<span> $41</span></h6>
+                            </div>
+                            <div class="cart-inline-body">
+                            <div class="cart-inline-item">
+                                <div class="unit unit-spacing-sm align-items-center">
+                                <div class="unit-left"><a class="cart-inline-figure" href="single-product.html"><img src="images/product-mini-2-106x104.jpg" alt="" width="106" height="104"/></a></div>
+                                <div class="unit-body">
+                                    <h6 class="cart-inline-name"><a href="single-product.html">Stay Wild T-Shirt</a></h6>
+                                    <div>
+                                    <div class="group-xs group-middle">
+                                        <div class="table-cart-stepper">
+                                        <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000"/>
+                                        </div>
+                                        <h6 class="cart-inline-title">$18.00</h6>
+                                    </div>
+                                    </div>
                                 </div>
-                                <h6 class="cart-inline-title">$18.00</h6>
-                            </div>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="cart-inline-item">
-                        <div class="unit unit-spacing-sm align-items-center">
-                        <div class="unit-left"><a class="cart-inline-figure" href="single-product.html"><img src="images/product-mini-1-106x104.jpg" alt="" width="106" height="104"/></a></div>
-                        <div class="unit-body">
-                            <h6 class="cart-inline-name"><a href="single-product.html">Bandico Baseball Hat</a></h6>
-                            <div>
-                            <div class="group-xs group-middle">
-                                <div class="table-cart-stepper">
-                                <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000"/>
                                 </div>
-                                <h6 class="cart-inline-title">$23.00</h6>
+                            </div>
+                            <div class="cart-inline-item">
+                                <div class="unit unit-spacing-sm align-items-center">
+                                <div class="unit-left"><a class="cart-inline-figure" href="single-product.html"><img src="images/product-mini-1-106x104.jpg" alt="" width="106" height="104"/></a></div>
+                                <div class="unit-body">
+                                    <h6 class="cart-inline-name"><a href="single-product.html">Bandico Baseball Hat</a></h6>
+                                    <div>
+                                    <div class="group-xs group-middle">
+                                        <div class="table-cart-stepper">
+                                        <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000"/>
+                                        </div>
+                                        <h6 class="cart-inline-title">$23.00</h6>
+                                    </div>
+                                    </div>
+                                </div>
+                                </div>
                             </div>
                             </div>
+                            <div class="cart-inline-footer">
+                            <div class="group-sm"><a class="button button-default-outline-2 button-zakaria" href="cart-page.html">Go to cart</a><a class="button button-primary button-zakaria" href="checkout.html">Checkout</a></div>
+                            </div>
                         </div>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="cart-inline-footer">
-                    <div class="group-sm"><a class="button button-default-outline-2 button-zakaria" href="cart-page.html">Go to cart</a><a class="button button-primary button-zakaria" href="checkout.html">Checkout</a></div>
-                    </div>
-                </div>
+                    <% end %>
                 </div>
             </div>
             </div>
@@ -94,59 +101,10 @@
             <div class="rd-navbar-nav-wrap">
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
-                <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
-                </li>
-                <li class="rd-nav-item"><a class="rd-nav-link" href="#">Pages</a>
-                    <!-- RD Navbar Dropdown-->
-                    <ul class="rd-menu rd-navbar-dropdown">
-                    <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="bio.html">Bio</a></li>
-                    <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="events.html">Events</a></li>
-                    </ul>
-                </li>
-                <li class="rd-nav-item"><a class="rd-nav-link" href="grid-blog.html">Blog</a>
-                    <!-- RD Navbar Dropdown-->
-                    <ul class="rd-menu rd-navbar-dropdown">
-                    <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="blog-post.html">Blog Post</a></li>
-                    </ul>
-                </li>
-                <li class="rd-nav-item"><a class="rd-nav-link" href="discography.html">Gallery</a>
-                </li>
-                <li class="rd-nav-item"><a class="rd-nav-link" href="#">Elements</a>
-                    <!-- RD Navbar Megamenu-->
-                    <ul class="rd-menu rd-navbar-megamenu">
-                    <li class="rd-megamenu-item">
-                        <div class="rd-megamenu-title"><span class="rd-megamenu-icon"></span><span class="rd-megamenu-text">Elements</span></div>
-                        <ul class="rd-megamenu-list rd-megamenu-list-2">
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="typography.html">Typography</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="icon-lists.html">Icon lists</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="progress-bars.html">Progress bars</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="calls-to-action.html">Calls to action</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="buttons.html">Buttons</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="counters.html">Counters</a></li>
-                        </ul>
-                    </li>
-                    <li class="rd-megamenu-item">
-                        <div class="rd-megamenu-title"><span class="rd-megamenu-icon"></span><span class="rd-megamenu-text">Additional pages</span></div>
-                        <ul class="rd-megamenu-list">
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="404-page.html">404 Page</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="coming-soon.html">Coming Soon</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="contacts.html">Contacts</a></li>
-                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link" href="privacy-policy.html">Privacy Policy</a></li>
-                        </ul>
-                    </li>
-                    <li class="rd-megamenu-item rd-megamenu-banner">
-                        <div class="rd-megamenu-title"><span class="rd-megamenu-text">Buy Recent Releases & Merch</span></div><a class="banner-classic" href="grid-shop.html"><img src="images/banner-1-300x202.jpg" alt="" width="300" height="202"/></a>
-                    </li>
-                    </ul>
-                </li>
-                <li class="rd-nav-item"><a class="rd-nav-link" href="grid-shop.html">Shop</a>
-                    <!-- RD Navbar Dropdown-->
-                    <ul class="rd-menu rd-navbar-dropdown">
-                    <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="single-product.html">Single Product</a></li>
-                    <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="cart-page.html">Cart Page</a></li>
-                    <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="checkout.html">Checkout</a></li>
-                    </ul>
-                </li>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="<%= root_url %>">Home</a></li>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="<%= shop_url %>">Shop</a></li>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="<%= blog_url %>">Blog</a></li>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="<%= contact_url %>">Contact</a></li>
                 </ul>
             </div>
             </div>
